dataset1235/2025-2/2868285114/users/2107547248/executions/3792430146_1492666623.log
== RUN (2025-09-02 23:09:56)
-- CODE: 
quant_suco = int(input("quant_suco: "))
quant_salgado = int(input("quant_salgado: "))
valor_dis = float(input("digite o valor disponivel: "))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0
5
12.60
---- correct output:
17.5
Nao
---- user output:
quant_suco: quant_salgado: digite o valor disponivel:
-- TEST CASE 2:
---- input:
2
2
15.0
---- correct output:
13.0
Sim
---- user output:
quant_suco: quant_salgado: digite o valor disponivel:
-- TEST CASE 3:
---- input:
3
3
20.0
---- correct output:
19.5
Sim
---- user output:
quant_suco: quant_salgado: digite o valor disponivel:
-- TEST CASE 4:
---- input:
10
2
15.00
---- correct output:
37.0
Nao
---- user output:
quant_suco: quant_salgado: digite o valor disponivel:
-- TEST CASE 5:
---- input:
3
5
25.50
---- correct output:
26.5
Nao
---- user output:
quant_suco: quant_salgado: digite o valor disponivel:
-- TEST CASE 6:
---- input:
1
2
8.0
---- correct output:
10.0
Nao
---- user output:
quant_suco: quant_salgado: digite o valor disponivel:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 23:19:18)
-- CODE: 
quant_suco = int(input("quant_suco: "))
quant_salgado = int(input("quant_salgado: "))
valor_disponivel = float(input("digite o valor disponivel: "))
valor_disponivel_arredondado = round(valor_disponivel,2)
print(valor_disponivel_arredondado)
valortotal=(quant_suco + quant_salgado) * valor_disponivel
if valor_disponivel_arredondado > 6.5:
  print("sim")
else:
  print("nao")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0
5
12.60
---- correct output:
17.5
Nao
---- user output:
sim
-- TEST CASE 2:
---- input:
2
2
15.0
---- correct output:
13.0
Sim
---- user output:
sim
-- TEST CASE 3:
---- input:
3
3
20.0
---- correct output:
19.5
Sim
---- user output:
sim
-- TEST CASE 4:
---- input:
10
2
15.00
---- correct output:
37.0
Nao
---- user output:
sim
-- TEST CASE 5:
---- input:
3
5
25.50
---- correct output:
26.5
Nao
---- user output:
sim
-- TEST CASE 6:
---- input:
1
2
8.0
---- correct output:
10.0
Nao
---- user output:
sim
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 23:13:34)
-- CODE: 
quant_suco = int(input("quant_suco: "))
quant_salgado = int(input("quant_salgado: "))
valor_disp = float(input("digite o valor disponivel: "))
valor_disponivel_arredodado = round(valor_disp,2)
print(valor_disponivel_arredondado)
if valor_disponivel_arredodado > 6.5:
  print("sim")
else:
  print("nao")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0
5
12.60
---- correct output:
17.5
Nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(valor_disponivel_arredondado)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
NameError: name 'valor_disponivel_arredondado' is not defined. Did you mean: 'valor_disponivel_arredodado'?
-- TEST CASE 2:
---- input:
2
2
15.0
---- correct output:
13.0
Sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(valor_disponivel_arredondado)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
NameError: name 'valor_disponivel_arredondado' is not defined. Did you mean: 'valor_disponivel_arredodado'?
-- TEST CASE 3:
---- input:
3
3
20.0
---- correct output:
19.5
Sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(valor_disponivel_arredondado)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
NameError: name 'valor_disponivel_arredondado' is not defined. Did you mean: 'valor_disponivel_arredodado'?
-- TEST CASE 4:
---- input:
10
2
15.00
---- correct output:
37.0
Nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(valor_disponivel_arredondado)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
NameError: name 'valor_disponivel_arredondado' is not defined. Did you mean: 'valor_disponivel_arredodado'?
-- TEST CASE 5:
---- input:
3
5
25.50
---- correct output:
26.5
Nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(valor_disponivel_arredondado)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
NameError: name 'valor_disponivel_arredondado' is not defined. Did you mean: 'valor_disponivel_arredodado'?
-- TEST CASE 6:
---- input:
1
2
8.0
---- correct output:
10.0
Nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(valor_disponivel_arredondado)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
NameError: name 'valor_disponivel_arredondado' is not defined. Did you mean: 'valor_disponivel_arredodado'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 23:09:34)
-- CODE: 
quant_suco = int(input("quant_suco: "))
quant_salgado = int(input("quant_salgado"))
valor_dis = float(input("digite o valor disponivel"))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0
5
12.60
---- correct output:
17.5
Nao
---- user output:
quant_suco: quant_salgadodigite o valor disponivel
-- TEST CASE 2:
---- input:
2
2
15.0
---- correct output:
13.0
Sim
---- user output:
quant_suco: quant_salgadodigite o valor disponivel
-- TEST CASE 3:
---- input:
3
3
20.0
---- correct output:
19.5
Sim
---- user output:
quant_suco: quant_salgadodigite o valor disponivel
-- TEST CASE 4:
---- input:
10
2
15.00
---- correct output:
37.0
Nao
---- user output:
quant_suco: quant_salgadodigite o valor disponivel
-- TEST CASE 5:
---- input:
3
5
25.50
---- correct output:
26.5
Nao
---- user output:
quant_suco: quant_salgadodigite o valor disponivel
-- TEST CASE 6:
---- input:
1
2
8.0
---- correct output:
10.0
Nao
---- user output:
quant_suco: quant_salgadodigite o valor disponivel
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 23:27:35)
-- CODE: 
quant_suco = int(input("quant_suco: "))
quant_salgado = int(input("quant_salgado: "))
valor_disponivel = float(input("digite o valor disponivel: "))
valortotal=(3.50 * quant_salgado) + (3.00 * quant_suco)
valortotalarredondado = round(valortotal,2)
print(valortotalarredondado)
if valortotalarredondado > valor_disponivel:
  print("Nao")
else:
  print("Sim")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0
5
12.60
---- correct output:
17.5
Nao
---- user output:
Nao
-- TEST CASE 2:
---- input:
2
2
15.0
---- correct output:
13.0
Sim
---- user output:
Sim
-- TEST CASE 3:
---- input:
3
3
20.0
---- correct output:
19.5
Sim
---- user output:
Sim
-- TEST CASE 4:
---- input:
10
2
15.00
---- correct output:
37.0
Nao
---- user output:
Nao
-- TEST CASE 5:
---- input:
3
5
25.50
---- correct output:
26.5
Nao
---- user output:
Nao
-- TEST CASE 6:
---- input:
1
2
8.0
---- correct output:
10.0
Nao
---- user output:
Nao
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
